force-app/main/default/objects/Log__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>The Apex Class which spawned the current log record.</description>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>