force-app/main/default/objects/Log__c/fields/LoggedAt__c.field-meta.xml
<CustomField>
    <fullName>LoggedAt__c</fullName>
    <description>The Date/Time that the message was logged. This may differ slightly from the CreatedDate, depending on the publishing method</description>
    <label>Logged At</label>
    <type>DateTime</type>
</CustomField>