force-app/main/default/objects/Log__c/fields/LoggedBy__c.field-meta.xml
<CustomField>
    <fullName>LoggedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the user that requested the Log. This may differ from the &quot;Created By&quot; user, if the log was published via platform event.</description>
    <label>Logged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>