force-app/main/default/objects/Log__c/fields/LoggedFrom__c.field-meta.xml
<CustomField>
    <fullName>LoggedFrom__c</fullName>
    <description>The component (ex., Logged From) which spawned the current log record.</description>
    <label>Logged From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>