force-app/main/default/objects/Log__c/fields/Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Ordinal__c</fullName>
    <inlineHelpText>Indicates the order in which logs in the same transaction were inserted (beginning with 1).</inlineHelpText>
    <label>Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>