force-app/main/default/objects/Log__c/fields/PublishMethod__c.field-meta.xml
<CustomField>
    <fullName>PublishMethod__c</fullName>
    <description>Indicates how the log message was published (ex., Synchronous or Platform Event).</description>
    <label>Publish Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>