force-app/main/default/objects/Log__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>The 18-digit Salesforce Id of the record most closely related to the current log.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>