force-app/main/default/objects/Log__c/fields/RelatedRecordUrl__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordUrl__c</fullName>
    <description>Hyperlink to the Related Record, for use in the UI.</description>
    <formula>HYPERLINK(&quot;/&quot; + RelatedRecordId__c, RelatedRecordId__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>