force-app/main/default/objects/Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Contains optional information about where the log originated. Ex., a specific managed package, or a specific business process.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>