force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Body__c</columns>
    <columns>Context__c</columns>
    <columns>RelatedRecordUrl__c</columns>
    <columns>LoggedBy__c</columns>
    <columns>LoggedAt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>